package upgrade done

--- a/angular/src/app/demo/authentication/sign-in/sign-in.component.html
+++ b/angular/src/app/demo/authentication/sign-in/sign-in.component.html
@@ -17,14 +17,20 @@
             <div class="form-group text-start mt-2">
               <div class="checkbox checkbox-primary d-inline">
                 <input type="checkbox" name="checkbox-fill-1" id="checkbox-fill-a1" checked="" />
-                <label for="checkbox-fill-a1" class="cr"> Save credentials</label>
+                <label for="checkbox-fill-a1" class="cr">Save credentials</label>
               </div>
             </div>
             <div class="d-grid">
               <button class="btn btn-block btn-primary mb-4">SignIn</button>
             </div>
-            <p class="mb-2 text-muted">Forgot password? <a href="javascriprt:" class="f-w-400">Reset</a></p>
-            <p class="mb-0 text-muted">Don’t have an account? <a [routerLink]="['/auth/signup']" class="f-w-400">Signup</a></p>
+            <p class="mb-2 text-muted">
+              Forgot password?
+              <a href="javascriprt:" class="f-w-400">Reset</a>
+            </p>
+            <p class="mb-0 text-muted">
+              Don’t have an account?
+              <a [routerLink]="['/auth/signup']" class="f-w-400">Signup</a>
+            </p>
           </div>
         </div>
       </div>
