--- a/angular/src/app/demo/authentication/sign-up/sign-up.component.html
+++ b/angular/src/app/demo/authentication/sign-up/sign-up.component.html
@@ -21,13 +21,20 @@
             <div class="form-group text-start mt-2">
               <div class="checkbox checkbox-primary d-inline">
                 <input type="checkbox" name="checkbox-fill-2" id="checkbox-fill-2" />
-                <label for="checkbox-fill-2" class="cr">Send me the <a href="javascript:"> Newsletter </a> weekly.</label>
+                <label for="checkbox-fill-2" class="cr">
+                  Send me the
+                  <a href="javascript:">Newsletter</a>
+                  weekly.
+                </label>
               </div>
             </div>
             <div class="d-grid">
               <button class="btn btn-primary btn-block mb-4">Sign up</button>
             </div>
-            <p class="mb-2">Already have an account? <a [routerLink]="['/auth/signin']" class="f-w-400">Signin</a></p>
+            <p class="mb-2">
+              Already have an account?
+              <a [routerLink]="['/auth/signin']" class="f-w-400">Signin</a>
+            </p>
           </div>
         </div>
       </div>
