--- a/angular/src/app/demo/ui-element/badge/badge.component.html
+++ b/angular/src/app/demo/ui-element/badge/badge.component.html
@@ -1,22 +1,58 @@
 <div class="row btn-page">
   <div class="col-sm-12">
     <app-card cardTitle="Basic Badges" [options]="false" blockClass="pt-0">
-      <h1>Example heading <span class="badge bg-secondary">New</span></h1>
-      <h2>Example heading <span class="badge bg-secondary">New</span></h2>
-      <h3>Example heading <span class="badge bg-secondary">New</span></h3>
-      <h4>Example heading <span class="badge bg-secondary">New</span></h4>
-      <h5>Example heading <span class="badge bg-secondary">New</span></h5>
-      <h6>Example heading <span class="badge bg-secondary">New</span></h6>
+      <h1>
+        Example heading
+        <span class="badge bg-secondary">New</span>
+      </h1>
+      <h2>
+        Example heading
+        <span class="badge bg-secondary">New</span>
+      </h2>
+      <h3>
+        Example heading
+        <span class="badge bg-secondary">New</span>
+      </h3>
+      <h4>
+        Example heading
+        <span class="badge bg-secondary">New</span>
+      </h4>
+      <h5>
+        Example heading
+        <span class="badge bg-secondary">New</span>
+      </h5>
+      <h6>
+        Example heading
+        <span class="badge bg-secondary">New</span>
+      </h6>
     </app-card>
   </div>
   <div class="col-sm-12">
     <app-card cardTitle="Button Badges" [options]="false" blockClass="pt-0">
-      <button type="button" class="btn btn-primary">primary <span class="badge bg-light text-dark">4</span></button>
-      <button type="button" class="btn btn-secondary">secondary <span class="badge bg-light text-dark">4</span></button>
-      <button type="button" class="btn btn-success">success <span class="badge bg-light text-dark">4</span></button>
-      <button type="button" class="btn btn-danger">danger <span class="badge bg-light text-dark">4</span></button>
-      <button type="button" class="btn btn-warning">warning <span class="badge bg-light text-dark">4</span></button>
-      <button type="button" class="btn btn-info">info <span class="badge bg-light text-dark">4</span></button>
+      <button type="button" class="btn btn-primary">
+        primary
+        <span class="badge bg-light text-dark">4</span>
+      </button>
+      <button type="button" class="btn btn-secondary">
+        secondary
+        <span class="badge bg-light text-dark">4</span>
+      </button>
+      <button type="button" class="btn btn-success">
+        success
+        <span class="badge bg-light text-dark">4</span>
+      </button>
+      <button type="button" class="btn btn-danger">
+        danger
+        <span class="badge bg-light text-dark">4</span>
+      </button>
+      <button type="button" class="btn btn-warning">
+        warning
+        <span class="badge bg-light text-dark">4</span>
+      </button>
+      <button type="button" class="btn btn-info">
+        info
+        <span class="badge bg-light text-dark">4</span>
+      </button>
     </app-card>
   </div>
   <div class="col-sm-12">
