--- a/angular/src/app/demo/ui-element/button/button.component.html
+++ b/angular/src/app/demo/ui-element/button/button.component.html
@@ -13,7 +13,7 @@
         <button type="button" class="btn btn-link" ngbTooltip="btn-link">Link</button>
       </div>
       <div class="d-grid gap-2 mt-2">
-        <button class="btn btn-primary" type="button"> Block Level Button </button>
+        <button class="btn btn-primary" type="button">Block Level Button</button>
       </div>
     </app-card>
   </div>
@@ -63,13 +63,19 @@
   <!-- [ disabled-button ] start -->
   <div class="col-sm-12">
     <app-card cardTitle="Disabled Button" [options]="false">
-      <p> use <code>.disabled</code> in class <code>.btn</code> class to get Disabled button </p>
+      <p>
+        use
+        <code>.disabled</code>
+        in class
+        <code>.btn</code>
+        class to get Disabled button
+      </p>
       <div class="d-flex flex-wrap gap-2">
-        <button type="button" class="btn disabled btn-primary"> Primary </button>
-        <button type="button" class="btn disabled btn-secondary"> Secondary </button>
-        <button type="button" class="btn disabled btn-success"> Success </button>
+        <button type="button" class="btn disabled btn-primary">Primary</button>
+        <button type="button" class="btn disabled btn-secondary">Secondary</button>
+        <button type="button" class="btn disabled btn-success">Success</button>
         <button type="button" class="btn disabled btn-danger">Danger</button>
-        <button type="button" class="btn disabled btn-warning text-dark"> Warning </button>
+        <button type="button" class="btn disabled btn-warning text-dark">Warning</button>
         <button type="button" class="btn disabled btn-info">Info</button>
         <button type="button" class="btn disabled btn-light">Light</button>
         <button type="button" class="btn disabled btn-dark">Dark</button>
@@ -81,11 +87,11 @@
   <div class="col-sm-12">
     <app-card cardTitle="Shadow" [options]="false">
       <div class="d-flex flex-wrap gap-2">
-        <button type="button" class="btn btn-shadow btn-primary"> Primary </button>
-        <button type="button" class="btn btn-shadow btn-secondary"> Secondary </button>
-        <button type="button" class="btn btn-shadow btn-success"> Success </button>
-        <button type="button" class="btn btn-shadow btn-danger"> Danger </button>
-        <button type="button" class="btn btn-shadow btn-warning text-dark"> Warning </button>
+        <button type="button" class="btn btn-shadow btn-primary">Primary</button>
+        <button type="button" class="btn btn-shadow btn-secondary">Secondary</button>
+        <button type="button" class="btn btn-shadow btn-success">Success</button>
+        <button type="button" class="btn btn-shadow btn-danger">Danger</button>
+        <button type="button" class="btn btn-shadow btn-warning text-dark">Warning</button>
         <button type="button" class="btn btn-shadow btn-info">Info</button>
         <button type="button" class="btn btn-shadow btn-light">Light</button>
         <button type="button" class="btn btn-shadow btn-dark">Dark</button>
@@ -97,10 +103,16 @@
   <!-- [ size-button ] start -->
   <div class="col-md-6">
     <app-card cardTitle="Sizes [ Large ]" [options]="false">
-      <p> use <code>.btn-lg</code> in class <code>.btn</code> class to get Large button </p>
+      <p>
+        use
+        <code>.btn-lg</code>
+        in class
+        <code>.btn</code>
+        class to get Large button
+      </p>
       <div class="d-flex flex-wrap gap-2">
-        <button type="button" class="btn btn-primary btn-lg"> Large button </button>
-        <button type="button" class="btn btn-secondary btn-lg"> Large button </button>
+        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+        <button type="button" class="btn btn-secondary btn-lg">Large button</button>
       </div>
     </app-card>
   </div>
@@ -108,10 +120,16 @@
   <!-- [ size-small-button ] start -->
   <div class="col-md-6">
     <app-card cardTitle="Sizes [ Small ]" [options]="false">
-      <p> use <code>.btn-sm</code> in class <code>.btn</code> class to get Small button </p>
+      <p>
+        use
+        <code>.btn-sm</code>
+        in class
+        <code>.btn</code>
+        class to get Small button
+      </p>
       <div class="d-flex flex-wrap gap-2">
-        <button type="button" class="btn btn-primary btn-sm"> Small button </button>
-        <button type="button" class="btn btn-secondary btn-sm"> Small button </button>
+        <button type="button" class="btn btn-primary btn-sm">Small button</button>
+        <button type="button" class="btn btn-secondary btn-sm">Small button</button>
       </div>
     </app-card>
   </div>
@@ -122,12 +140,30 @@
   <div class="col-md-6">
     <app-card cardTitle="Button With Icon" [options]="false">
       <div class="d-flex flex-wrap gap-2">
-        <button type="button" class="btn btn-primary"> <i class="feather icon-thumbs-up me-1"></i>Primary </button>
-        <button type="button" class="btn btn-secondary"> <i class="feather icon-camera me-1"></i>Secondary </button>
-        <button type="button" class="btn btn-success"> <i class="feather icon-check-circle me-1"></i>Success </button>
-        <button type="button" class="btn btn-danger"> <i class="feather icon-slash me-1"></i>Danger </button>
-        <button type="button" class="btn btn-warning text-dark"> <i class="feather icon-alert-triangle me-1"></i>Warning </button>
-        <button type="button" class="btn btn-info"> <i class="feather icon-info me-1"></i>Info </button>
+        <button type="button" class="btn btn-primary">
+          <i class="feather icon-thumbs-up me-1"></i>
+          Primary
+        </button>
+        <button type="button" class="btn btn-secondary">
+          <i class="feather icon-camera me-1"></i>
+          Secondary
+        </button>
+        <button type="button" class="btn btn-success">
+          <i class="feather icon-check-circle me-1"></i>
+          Success
+        </button>
+        <button type="button" class="btn btn-danger">
+          <i class="feather icon-slash me-1"></i>
+          Danger
+        </button>
+        <button type="button" class="btn btn-warning text-dark">
+          <i class="feather icon-alert-triangle me-1"></i>
+          Warning
+        </button>
+        <button type="button" class="btn btn-info">
+          <i class="feather icon-info me-1"></i>
+          Info
+        </button>
       </div>
     </app-card>
   </div>
@@ -136,12 +172,30 @@
   <div class="col-md-6">
     <app-card cardTitle="Outline Icon BUttons" [options]="false">
       <div class="d-flex flex-wrap gap-2">
-        <button type="button" class="btn btn-outline-primary"> <i class="feather icon-thumbs-up me-1"></i>Primary </button>
-        <button type="button" class="btn btn-outline-secondary"> <i class="feather icon-camera me-1"></i>Secondary </button>
-        <button type="button" class="btn btn-outline-success"> <i class="feather icon-check-circle me-1"></i>Success </button>
-        <button type="button" class="btn btn-outline-danger"> <i class="feather icon-slash me-1"></i>Danger </button>
-        <button type="button" class="btn btn-outline-warning"> <i class="feather icon-alert-triangle me-1"></i>Warning </button>
-        <button type="button" class="btn btn-outline-info"> <i class="feather icon-info me-1"></i>Info </button>
+        <button type="button" class="btn btn-outline-primary">
+          <i class="feather icon-thumbs-up me-1"></i>
+          Primary
+        </button>
+        <button type="button" class="btn btn-outline-secondary">
+          <i class="feather icon-camera me-1"></i>
+          Secondary
+        </button>
+        <button type="button" class="btn btn-outline-success">
+          <i class="feather icon-check-circle me-1"></i>
+          Success
+        </button>
+        <button type="button" class="btn btn-outline-danger">
+          <i class="feather icon-slash me-1"></i>
+          Danger
+        </button>
+        <button type="button" class="btn btn-outline-warning">
+          <i class="feather icon-alert-triangle me-1"></i>
+          Warning
+        </button>
+        <button type="button" class="btn btn-outline-info">
+          <i class="feather icon-info me-1"></i>
+          Info
+        </button>
       </div>
     </app-card>
   </div>
@@ -283,7 +337,13 @@
     <app-card cardTitle="Button Toolbar Size" [options]="false">
       <div class="row">
         <div class="col-xl-4 col-md-12 mb-2">
-          <p>use <code>.btn-group-lg</code> in class <code>.btn-group</code> class to get large size button group</p>
+          <p>
+            use
+            <code>.btn-group-lg</code>
+            in class
+            <code>.btn-group</code>
+            class to get large size button group
+          </p>
           <div class="btn-group btn-group-lg" role="group" aria-label="button groups xl">
             <button type="button" class="btn btn-secondary">Left</button>
             <button type="button" class="btn btn-secondary">Middle</button>
@@ -299,7 +359,13 @@
           </div>
         </div>
         <div class="col-xl-4 col-md-6 mb-2">
-          <p>use <code>.btn-group-sm</code> in class <code>.btn-group</code> class to get small size button group</p>
+          <p>
+            use
+            <code>.btn-group-sm</code>
+            in class
+            <code>.btn-group</code>
+            class to get small size button group
+          </p>
           <div class="btn-group btn-group-sm" role="group" aria-label="button groups sm">
             <button type="button" class="btn btn-secondary">Left</button>
             <button type="button" class="btn btn-secondary">Middle</button>
@@ -318,7 +384,7 @@
         <button type="button" class="btn btn-primary">2</button>
         <div class="btn-group" role="group">
           <div ngbDropdown>
-            <button type="button" class="btn btn-primary dropdown-toggle custom-border" ngbDropdownToggle> Dropdown </button>
+            <button type="button" class="btn btn-primary dropdown-toggle custom-border" ngbDropdownToggle>Dropdown</button>
             <div class="dropdown-menu" ngbDropdownMenu>
               <a class="dropdown-item" href="javascript:">Dropdown link</a>
               <a class="dropdown-item" href="javascript:">Dropdown link</a>
@@ -346,7 +412,7 @@
             <button type="button" class="btn m-0 btn-secondary">2</button>
             <div class="btn-group" role="group">
               <div ngbDropdown>
-                <button type="button" class="btn m-0 btn-secondary vertical-custom dropdown-toggle" ngbDropdownToggle> Dropdown </button>
+                <button type="button" class="btn m-0 btn-secondary vertical-custom dropdown-toggle" ngbDropdownToggle>Dropdown</button>
                 <div class="dropdown-menu" ngbDropdownMenu>
                   <a class="dropdown-item" href="javascript:">Dropdown link</a>
                   <a class="dropdown-item" href="javascript:">Dropdown link</a>
@@ -371,7 +437,7 @@
       <hr />
       <div class="btn-group" role="group">
         <button type="button" class="btn btn-light-danger">A</button>
-        <button type="button" class="btn btn-light-warning text-dark"> A </button>
+        <button type="button" class="btn btn-light-warning text-dark">A</button>
         <button type="button" class="btn btn-light-primary">A</button>
         <button type="button" class="btn btn-light-success">A</button>
       </div>
@@ -383,7 +449,7 @@
     <app-card cardTitle="Outlined styles" [options]="false">
       <div class="btn-group" role="group">
         <button type="button" class="btn btn-outline-secondary">Left</button>
-        <button type="button" class="btn btn-outline-secondary"> Middle </button>
+        <button type="button" class="btn btn-outline-secondary">Middle</button>
         <button type="button" class="btn btn-outline-secondary">Right</button>
       </div>
       <hr />
