--- a/angular/src/app/demo/ui-element/typography/typography.component.html
+++ b/angular/src/app/demo/ui-element/typography/typography.component.html
@@ -5,8 +5,9 @@
       <div class="card-header">
         <h5>Headings</h5>
         <p>
-          <span class="badges">.h1</span> through .h6 classes are also available, for when you want to match the font styling of a heading
-          but cannot use the associated HTML element.
+          <span class="badges">.h1</span>
+          through .h6 classes are also available, for when you want to match the font styling of a heading but cannot use the associated
+          HTML element.
         </p>
       </div>
       <div class="card-body">
@@ -38,7 +39,8 @@
     <app-card cardTitle="Inline Text Elements" [options]="false">
       <p class="lead m-t-0">Your title goes here</p>
       You can use the mark tag to
-      <mark>highlight</mark> text.
+      <mark>highlight</mark>
+      text.
       <br />
       <del>This line of text is meant to be treated as deleted text.</del>
       <br />
@@ -51,13 +53,13 @@
   </div>
   <div class="col-md-6">
     <app-card cardTitle="Contextual Text Colors" [options]="false">
-      <p class="text-muted mb-1"> Fusce dapibus, tellus ac cursus commodo, tortor mauris nibh. </p>
-      <p class="text-primary mb-1"> Nullam id dolor id nibh ultricies vehicula ut id elit. </p>
-      <p class="text-success mb-1"> Duis mollis, est non commodo luctus, nisi erat porttitor ligula. </p>
-      <p class="text-info mb-1"> Maecenas sed diam eget risus varius blandit sit amet non magna. </p>
-      <p class="text-warning mb-1"> Etiam porta sem malesuada magna mollis euismod. </p>
-      <p class="text-danger mb-1"> Donec ullamcorper nulla non metus auctor fringilla. </p>
-      <p class="text-dark mb-1"> Nullam id dolor id nibh ultricies vehicula ut id elit. </p>
+      <p class="text-muted mb-1">Fusce dapibus, tellus ac cursus commodo, tortor mauris nibh.</p>
+      <p class="text-primary mb-1">Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+      <p class="text-success mb-1">Duis mollis, est non commodo luctus, nisi erat porttitor ligula.</p>
+      <p class="text-info mb-1">Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+      <p class="text-warning mb-1">Etiam porta sem malesuada magna mollis euismod.</p>
+      <p class="text-danger mb-1">Donec ullamcorper nulla non metus auctor fringilla.</p>
+      <p class="text-dark mb-1">Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
     </app-card>
   </div>
   <div class="col-md-6 col-lg-4">
@@ -130,13 +132,23 @@
     <app-card cardTitle="Blockquotes" [options]="false">
       <p class="text-muted m-b-30">Your awesome text goes here.</p>
       <blockquote class="blockquote">
-        <p class="mb-2 pb-2"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. </p>
-        <footer class="blockquote-footer"> Someone famous in <cite title="Source Title">Source Title</cite> </footer>
+        <p class="mb-2 pb-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+        <footer class="blockquote-footer">
+          Someone famous in
+          <cite title="Source Title">Source Title</cite>
+        </footer>
       </blockquote>
-      <p class="text-muted m-b-15 m-t-20"> Add <code>.text-end</code> for a blockquote with right-aligned content. </p>
+      <p class="text-muted m-b-15 m-t-20">
+        Add
+        <code>.text-end</code>
+        for a blockquote with right-aligned content.
+      </p>
       <blockquote class="blockquote text-end">
-        <p class="mb-2 pb-2"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. </p>
-        <footer class="blockquote-footer"> Someone famous in <cite title="Source Title">Source Title</cite> </footer>
+        <p class="mb-2 pb-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+        <footer class="blockquote-footer">
+          Someone famous in
+          <cite title="Source Title">Source Title</cite>
+        </footer>
       </blockquote>
     </app-card>
   </div>
@@ -144,14 +156,14 @@
     <app-card cardTitle=">Horizontal Description" [options]="false">
       <dl class="dl-horizontal row">
         <dt class="col-sm-3">Description lists</dt>
-        <dd class="col-sm-9"> A description list is perfect for defining terms. </dd>
+        <dd class="col-sm-9">A description list is perfect for defining terms.</dd>
 
         <dt class="col-sm-3">Euismod</dt>
-        <dd class="col-sm-9"> Vestibulum id ligula porta felis euismod semper eget lacinia odio sem nec elit. </dd>
-        <dd class="col-sm-9"> Donec id elit non mi porta gravida at eget metus. </dd>
+        <dd class="col-sm-9">Vestibulum id ligula porta felis euismod semper eget lacinia odio sem nec elit.</dd>
+        <dd class="col-sm-9">Donec id elit non mi porta gravida at eget metus.</dd>
 
         <dt class="col-sm-3">Malesuada porta</dt>
-        <dd class="col-sm-9"> Etiam porta sem malesuada magna mollis euismod. </dd>
+        <dd class="col-sm-9">Etiam porta sem malesuada magna mollis euismod.</dd>
 
         <dt class="col-sm-3 text-truncate">Truncated term is truncated</dt>
         <dd class="col-sm-9">
