--- a/angular/src/app/theme/layout/admin/nav-bar/nav-right/nav-right.component.html
+++ b/angular/src/app/theme/layout/admin/nav-bar/nav-right/nav-right.component.html
@@ -1,9 +1,10 @@
 <ul class="navbar-nav ms-auto">
   <li>
     <div class="dropdown" ngbDropdown placement="auto">
-      <a ngbDropdownToggle href="javascript:"
-        ><i class="icon feather icon-bell" title="Notification"></i><span class="badge bg-danger"><span class="sr-only"></span></span
-      ></a>
+      <a ngbDropdownToggle href="javascript:">
+        <i class="icon feather icon-bell" title="Notification"></i>
+        <span class="badge bg-danger"><span class="sr-only"></span></span>
+      </a>
       <div ngbDropdownMenu class="dropdown-menu dropdown-menu-end notification">
         <div class="noti-head">
           <h6 class="d-inline-block m-b-0">Notifications</h6>
@@ -20,9 +21,13 @@
             <div class="media">
               <img class="img-radius" src="assets/images/user/avatar-1.jpg" alt="Generic placeholder image" />
               <div class="media-body">
-                <p
-                  ><strong>John Doe</strong><span class="n-time text-muted"><i class="icon feather icon-clock m-r-10"></i>30 min</span></p
-                >
+                <p>
+                  <strong>John Doe</strong>
+                  <span class="n-time text-muted">
+                    <i class="icon feather icon-clock m-r-10"></i>
+                    30 min
+                  </span>
+                </p>
                 <p>New ticket Added</p>
               </div>
             </div>
@@ -34,10 +39,13 @@
             <div class="media">
               <img class="img-radius" src="assets/images/user/avatar-2.jpg" alt="Generic placeholder image" />
               <div class="media-body">
-                <p
-                  ><strong>Joseph William</strong
-                  ><span class="n-time text-muted"><i class="icon feather icon-clock m-r-10"></i>30 min</span></p
-                >
+                <p>
+                  <strong>Joseph William</strong>
+                  <span class="n-time text-muted">
+                    <i class="icon feather icon-clock m-r-10"></i>
+                    30 min
+                  </span>
+                </p>
                 <p>Purchase New Theme and make payment</p>
               </div>
             </div>
@@ -46,10 +54,13 @@
             <div class="media">
               <img class="img-radius" src="assets/images/user/avatar-3.jpg" alt="Generic placeholder image" />
               <div class="media-body">
-                <p
-                  ><strong>Sara Soudein</strong
-                  ><span class="n-time text-muted"><i class="icon feather icon-clock m-r-10"></i>30 min</span></p
-                >
+                <p>
+                  <strong>Sara Soudein</strong>
+                  <span class="n-time text-muted">
+                    <i class="icon feather icon-clock m-r-10"></i>
+                    30 min
+                  </span>
+                </p>
                 <p>currently login</p>
               </div>
             </div>
@@ -64,7 +75,8 @@
   <li (click)="this.visibleUserList = !this.visibleUserList">
     <div class="dropdown">
       <a href="javascript:" class="displayChatbox dropdown-toggle">
-        <i class="icon feather icon-mail" title="Mail InBox"></i><span class="badge bg-success"><span class="sr-only"></span></span>
+        <i class="icon feather icon-mail" title="Mail InBox"></i>
+        <span class="badge bg-success"><span class="sr-only"></span></span>
       </a>
     </div>
   </li>
@@ -82,15 +94,24 @@
           </a>
         </div>
         <ul class="pro-body">
-          <li
-            ><a href="javascript:" class="dropdown-item"><i class="feather icon-user"></i> Profile</a></li
-          >
-          <li
-            ><a href="javascript:" class="dropdown-item"><i class="feather icon-mail"></i> My Messages</a></li
-          >
-          <li
-            ><a href="javascript:" class="dropdown-item"><i class="feather icon-lock"></i> Lock Screen</a></li
-          >
+          <li>
+            <a href="javascript:" class="dropdown-item">
+              <i class="feather icon-user"></i>
+              Profile
+            </a>
+          </li>
+          <li>
+            <a href="javascript:" class="dropdown-item">
+              <i class="feather icon-mail"></i>
+              My Messages
+            </a>
+          </li>
+          <li>
+            <a href="javascript:" class="dropdown-item">
+              <i class="feather icon-lock"></i>
+              Lock Screen
+            </a>
+          </li>
         </ul>
       </div>
     </div>
