--- a/angular/src/app/theme/layout/admin/navigation/nav-content/nav-content.component.html
+++ b/angular/src/app/theme/layout/admin/navigation/nav-content/nav-content.component.html
@@ -22,8 +22,9 @@
           href="https://codedthemes.com/item/gradient-able-angular-admin-template/?utm_source=free_demo&utm_medium=codedthemes&utm_campaign=button_download_premium"
           target="_blank"
           class="btn text-white btn-primary"
-          >Download Premium</a
         >
+          Download Premium
+        </a>
       </div>
     </div>
     <div class="version">
