--- a/angular/src/scss/themes/layouts/_menu-lite.scss
+++ b/angular/src/scss/themes/layouts/_menu-lite.scss
@@ -1169,14 +1169,14 @@
   &.navbar-collapsed:hover {
     ~ .pcoded-header,
     ~ .pcoded-main-container {
-      &:before {
-        position: absolute;
+      .pc-menu-overlay {
+        position: fixed;
         top: 0;
         left: 0;
         width: 100%;
         height: 100%;
-        // background-color: rgba(0,0,0,0.2);
-        z-index: 1;
+        background-color: rgba(0, 0, 0, 0.2);
+        z-index: 1025;
       }
     }
   }
