--- a/angular/src/app/demo/dashboard/product-sale/product-sale.component.html
+++ b/angular/src/app/demo/dashboard/product-sale/product-sale.component.html
@@ -16,8 +16,8 @@
       <tr>
         <td>08-11-2016</td>
         @for (progress of progressBar; track progress) {
-          <td
-            >{{ progress.value }}
+          <td>
+            {{ progress.value }}
             <div class="mt-1">
               <ngb-progressbar type="{{ progress.color }}" height="4px" [value]="progress.percentage"></ngb-progressbar>
             </div>
@@ -27,8 +27,8 @@
       <tr>
         <td>15-10-2016</td>
         @for (progress of progressBar2; track progress) {
-          <td
-            >{{ progress.value }}
+          <td>
+            {{ progress.value }}
             <div class="mt-1">
               <ngb-progressbar type="{{ progress.color }}" height="4px" [value]="progress.percentage"></ngb-progressbar>
             </div>
@@ -38,8 +38,8 @@
       <tr>
         <td>08-08-2017</td>
         @for (progress of progressBar3; track progress) {
-          <td
-            >{{ progress.value }}
+          <td>
+            {{ progress.value }}
             <div class="mt-1">
               <ngb-progressbar type="{{ progress.color }}" height="4px" [value]="progress.percentage"></ngb-progressbar>
             </div>
@@ -49,8 +49,8 @@
       <tr>
         <td>11-12-2017</td>
         @for (progress of progressBar4; track progress) {
-          <td
-            >{{ progress.value }}
+          <td>
+            {{ progress.value }}
             <div class="mt-1">
               <ngb-progressbar type="{{ progress.color }}" height="4px" [value]="progress.percentage"></ngb-progressbar>
             </div>
@@ -60,8 +60,8 @@
       <tr>
         <td>05-06-2015</td>
         @for (progress of progressBar5; track progress) {
-          <td
-            >{{ progress.value }}
+          <td>
+            {{ progress.value }}
             <div class="mt-1">
               <ngb-progressbar type="{{ progress.color }}" height="4px" [value]="progress.percentage"></ngb-progressbar>
             </div>
@@ -71,8 +71,8 @@
       <tr>
         <td>08-11-2016</td>
         @for (progress of progressBar6; track progress) {
-          <td
-            >{{ progress.value }}
+          <td>
+            {{ progress.value }}
             <div class="mt-1">
               <ngb-progressbar type="{{ progress.color }}" height="4px" [value]="progress.percentage"></ngb-progressbar>
             </div>
@@ -82,8 +82,8 @@
       <tr>
         <td>15-10-2016</td>
         @for (progress of progressBar7; track progress) {
-          <td
-            >{{ progress.value }}
+          <td>
+            {{ progress.value }}
             <div class="mt-1">
               <ngb-progressbar type="{{ progress.color }}" height="4px" [value]="progress.percentage"></ngb-progressbar>
             </div>
