--- a/angular/src/app/demo/forms & tables/form-elements/form-elements.component.html
+++ b/angular/src/app/demo/forms & tables/form-elements/form-elements.component.html
@@ -285,10 +285,9 @@
       <hr />
       <label for="inputPassword5">Password</label>
       <input type="password" id="inputPassword5" class="form-control" aria-describedby="passwordHelpBlock" />
-      <small id="passwordHelpBlock" class="form-text text-muted"
-        >Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or
-        emoji.</small
-      >
+      <small id="passwordHelpBlock" class="form-text text-muted">
+        Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
+      </small>
       <form action="javascript:" class="form-inline">
         <div class="form-group mt-3">
           <label for="inputPassword6">Password</label>
@@ -349,7 +348,7 @@
           <div class="form-check">
             <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required />
             <label class="form-check-label" for="invalidCheck">Agree to terms and conditions</label>
-            <div class="invalid-feedback"> You must agree before submitting. </div>
+            <div class="invalid-feedback">You must agree before submitting.</div>
           </div>
         </div>
         <button class="btn btn-primary" type="submit">Submit form</button>
@@ -360,7 +359,7 @@
         <div class="mb-3">
           <label for="validationTextarea" class="form-label">Textarea</label>
           <textarea class="form-control is-invalid" required id="validationTextarea" placeholder="Required example textarea"></textarea>
-          <div class="invalid-feedback"> Please enter a message in the textarea. </div>
+          <div class="invalid-feedback">Please enter a message in the textarea.</div>
         </div>
         <div class="custom-control custom-checkbox mb-3">
           <input type="checkbox" class="custom-control-input" id="customControlValidation1" required />
@@ -385,16 +384,16 @@
             <option value="2">Two</option>
             <option value="3">Three</option>
           </select>
-          <div class="invalid-feedback"> Example invalid custom select feedback </div>
+          <div class="invalid-feedback">Example invalid custom select feedback</div>
         </div>
 
         <div class="form-file mb-3">
           <input type="file" class="form-control" aria-label="file example" required />
-          <div class="invalid-feedback"> Example invalid custom file feedback </div>
+          <div class="invalid-feedback">Example invalid custom file feedback</div>
         </div>
       </form>
       <div class="mb-3">
-        <button type="button" class="btn btn-primary" type="submit" disabled> Submitform </button>
+        <button type="button" class="btn btn-primary" type="submit" disabled>Submitform</button>
       </div>
       <h5 class="mt-5">Tooltips</h5>
       <hr />
@@ -424,7 +423,7 @@
                   required
                 />
               </div>
-              <div class="invalid-tooltip"> Please choose a unique and valid username. </div>
+              <div class="invalid-tooltip">Please choose a unique and valid username.</div>
             </div>
           </div>
         </div>
@@ -583,7 +582,7 @@
       <div class="row">
         <div class="col-md-6">
           <div class="input-group mb-3">
-            <button class="btn btn-primary" type="button" id="button-addon1"> Button </button>
+            <button class="btn btn-primary" type="button" id="button-addon1">Button</button>
             <input
               type="text"
               class="form-control"
@@ -601,7 +600,7 @@
               aria-label="Recipient's username"
               aria-describedby="button-addon2"
             />
-            <button class="btn btn-primary" type="button" id="button-addon2"> Button </button>
+            <button class="btn btn-primary" type="button" id="button-addon2">Button</button>
           </div>
         </div>
         <div class="col-md-6">
@@ -626,7 +625,7 @@
           <hr />
           <div class="input-group mb-3">
             <div class="input-group-prepend" ngbDropdown placement="bottom-start">
-              <button class="btn btn-primary one-dropdown" ngbDropdownToggle type="button"> Dropdown </button>
+              <button class="btn btn-primary one-dropdown" ngbDropdownToggle type="button">Dropdown</button>
               <div ngbDropdownMenu>
                 <a class="dropdown-item" href="javascript:">Action</a>
                 <a class="dropdown-item" href="javascript:">Another action</a>
@@ -640,7 +639,7 @@
           <div class="input-group mb-3">
             <input type="text" class="form-control" aria-label="Text input with dropdown button" />
             <div class="input-group-append" ngbDropdown [placement]="'bottom-left'">
-              <button class="btn btn-primary one-dropdown" ngbDropdownToggle type="button"> Dropdown </button>
+              <button class="btn btn-primary one-dropdown" ngbDropdownToggle type="button">Dropdown</button>
               <div ngbDropdownMenu>
                 <a class="dropdown-item" href="javascript:">Action</a>
                 <a class="dropdown-item" href="javascript:">Another action</a>
@@ -742,12 +741,12 @@
             <label for="inputGroupFile01" class="input-group-text">Upload</label>
           </div>
           <div class="input-group mb-3">
-            <button class="btn btn-primary" id="inputGroupFileAddon03" type="button"> Button </button>
+            <button class="btn btn-primary" id="inputGroupFileAddon03" type="button">Button</button>
             <input type="file" class="form-control" id="inputGroupFile03" aria-describedby="inputGroupFileAddon03" aria-label="Upload" />
           </div>
           <div class="input-group">
             <input type="file" class="form-control" id="inputGroupFile03" aria-describedby="inputGroupFileAddon03" aria-label="Upload" />
-            <button class="btn btn-primary" id="inputGroupFileAddon03" type="button"> Button </button>
+            <button class="btn btn-primary" id="inputGroupFileAddon03" type="button">Button</button>
           </div>
         </div>
       </div>
