--- a/angular/src/app/demo/ui-element/breadcrumb/breadcrumb.component.html
+++ b/angular/src/app/demo/ui-element/breadcrumb/breadcrumb.component.html
@@ -76,7 +76,7 @@
         <nav aria-label="breadcrumb" style="--bs-breadcrumb-divider: '>'">
           <ol class="breadcrumb">
             <li class="breadcrumb-item">
-              <a href="javascript:"> <i class="feather icon-home"></i></a>
+              <a href="javascript:"><i class="feather icon-home"></i></a>
             </li>
             <li class="breadcrumb-item active" aria-current="page">Library</li>
           </ol>
@@ -125,7 +125,7 @@
         >
           <ol class="breadcrumb">
             <li class="breadcrumb-item">
-              <a href="javascript:"> <i class="feather icon-home"></i></a>
+              <a href="javascript:"><i class="feather icon-home"></i></a>
             </li>
             <li class="breadcrumb-item active" aria-current="page">Library</li>
           </ol>
@@ -170,17 +170,19 @@
         <nav aria-label="Page navigation example">
           <ul class="pagination">
             <li class="page-item">
-              <a class="page-link" href="javascript:" aria-label="Previous"
-                ><span aria-hidden="true">&laquo;</span><span class="sr-only">Previous</span></a
-              >
+              <a class="page-link" href="javascript:" aria-label="Previous">
+                <span aria-hidden="true">&laquo;</span>
+                <span class="sr-only">Previous</span>
+              </a>
             </li>
             <li class="page-item"><a class="page-link" href="javascript:">1</a></li>
             <li class="page-item"><a class="page-link" href="javascript:">2</a></li>
             <li class="page-item"><a class="page-link" href="javascript:">3</a></li>
             <li class="page-item">
-              <a class="page-link" href="javascript:" aria-label="Next"
-                ><span aria-hidden="true">&raquo;</span><span class="sr-only">Next</span></a
-              >
+              <a class="page-link" href="javascript:" aria-label="Next">
+                <span aria-hidden="true">&raquo;</span>
+                <span class="sr-only">Next</span>
+              </a>
             </li>
           </ul>
         </nav>
@@ -193,7 +195,10 @@
             </li>
             <li class="page-item"><a class="page-link" href="javascript:">1</a></li>
             <li class="page-item active">
-              <span class="page-link">2<span class="sr-only">(current)</span></span>
+              <span class="page-link">
+                2
+                <span class="sr-only">(current)</span>
+              </span>
             </li>
             <li class="page-item"><a class="page-link" href="javascript:">3</a></li>
             <li class="page-item"><a class="page-link" href="javascript:">Next</a></li>
