--- a/angular/src/app/theme/layout/admin/admin.component.html
+++ b/angular/src/app/theme/layout/admin/admin.component.html
@@ -24,5 +24,6 @@
       </div>
     </div>
   </div>
+  <div class="pc-menu-overlay" (click)="closeMenu()" (keydown)="handleKeyDown($event)" tabindex="0"></div>
 </div>
 <app-configuration></app-configuration>
