--- a/angular/src/app/theme/layout/admin/configuration/configuration.component.html
+++ b/angular/src/app/theme/layout/admin/configuration/configuration.component.html
@@ -4,6 +4,7 @@
     target="_blank"
     class="btn btn-md btn-primary has-ripple"
   >
-    <i aria-hidden="true" class="fa fa-shopping-cart"></i> Upgrade To Pro
+    <i aria-hidden="true" class="fa fa-shopping-cart"></i>
+    Upgrade To Pro
   </a>
 </div>
