--- a/angular/src/app/theme/layout/admin/nav-bar/nav-right/chat-user-list/friend/friend.component.html
+++ b/angular/src/app/theme/layout/admin/nav-bar/nav-right/chat-user-list/friend/friend.component.html
@@ -5,8 +5,8 @@
   [attr.data-status]="{ online: friends.status, offline: !friends.status }"
   [attr.data-username]="friends.name"
 >
-  <a class="media-left" href="javascript:"
-    ><img class="media-object img-radius" src="{{ friends.photo }}" alt="{{ friends.name }}" />
+  <a class="media-left" href="javascript:">
+    <img class="media-object img-radius" src="{{ friends.photo }}" alt="{{ friends.name }}" />
     @if (friends.new) {
       <div class="live-status">{{ friends.new }}</div>
     }
