--- a/angular/src/app/theme/layout/admin/navigation/nav-content/nav-group/nav-group.component.html
+++ b/angular/src/app/theme/layout/admin/navigation/nav-content/nav-group/nav-group.component.html
@@ -1,6 +1,6 @@
-<li class="nav-item pcoded-menu-caption"
-  ><label>{{ item.title }}</label></li
->
+<li class="nav-item pcoded-menu-caption">
+  <label>{{ item.title }}</label>
+</li>
 @for (item of item.children; track item) {
   @if (item.type === 'group') {
     <app-nav-group [item]="item"></app-nav-group>
